ryddet login side for JS, så nu tages man bare til brugeradmin siden. Derudover centreret bruger tabellen.

--- a/cdio/UI Layer (HTML & CSS)/index.html
+++ b/cdio/UI Layer (HTML & CSS)/index.html
@@ -9,15 +9,18 @@
     </head>
     <!-- Head end-->
 
+
     <!-- Body start -->
     <body>
+
+
         <div id="headers">
             <h1>Brugeradministration login side</h1>
             <h2>Gruppe 26</h2>
         </div>
 
         <div id="login form">
-            <form> <!-- action="./useradmin.html" -->
+            <form action="./useradmin.html">
                 <fieldset>
                     <legend>Brugeradministration login:</legend>
                     <img class="logo" src="https://nunataryuk.org/images/Logos/dtu_logo.png" alt="DTU logo">
@@ -26,11 +29,12 @@
                     Kodeord:<br>
                     <input type="password" id="password" name="password"><br>
                     <br>
-                    <!-- Skal tilpasses så den virker uden javaScript -->
-                    <input type="submit" id="loginButton" onclick="login()" value="Login">
+                    <input type="submit" id="loginButton" value="Login">
                 </fieldset>
             </form>
         </div>
+
+
     </body>
     <!-- Body end -->
 
