Brugeradministartionsside/tabel tilpasset til userDTO. Men hvad gør vi med roller?

--- a/cdio/UI Layer (HTML & CSS)/useradmin.html
+++ b/cdio/UI Layer (HTML & CSS)/useradmin.html
@@ -20,14 +20,14 @@
         <table class="mintabel">
             <tr>
                 <th>BrugerID</th>
-                <th>Bruger</th>
-                <th>Rolle</th>
-                <th>Fornavn</th>
-                <th>Vej</th>
-                <th>Adresse Nummer</th>
-                <th>Postnummer</th>
-                <th>By</th>
+                <th>Brugernavn</th>
+                <th>Initialer</th>
+                <th>CPR</th>
+                <th>Kodeord</th>
+                <th>Rolle(r)</th>
             </tr>
+
+            <!-- Temporary Example fill -->
             <tr>
                 <td>1</td>
                 <td>BrianTheMan</td>
@@ -35,8 +35,7 @@
                 <td>Brian</td>
                 <td>Anker Engelundsvej</td>
                 <td>1</td>
-                <td>2800</td>
-                <td>Kongens Lyngby</td>
+
             </tr>
             <tr>
                 <td>2</td>
@@ -45,8 +44,6 @@
                 <td>Anders</td>
                 <td>Paradisæblevej</td>
                 <td>13</td>
-                <td>1000</td>
-                <td>Andeby</td>
             </tr>
             <tr>
                 <td>3</td>
@@ -55,9 +52,8 @@
                 <td>Rip</td>
                 <td>Paradisæblevej</td>
                 <td>13</td>
-                <td>1000</td>
-                <td>Andeby</td>
             </tr>
+            <!-- Temporary  Example fill-->
         </table>
     </div>
 
