Foreløbig HTML og CSS omdøbt og merget ind i dev_samlet branch.

--- a/src/main/Website/userlogin.html
+++ b/src/main/Website/userlogin.html
@@ -5,7 +5,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Brugeradministration Login</title>
-        <link rel="stylesheet" type="text/css" href="index.css">
+        <link rel="stylesheet" type="text/css" href="userstyle.css">
     </head>
     <!-- Head end-->
 
@@ -20,7 +20,7 @@
         </div>
 
         <div id="login form">
-            <form action="./useradmin.html">
+            <form action="useradmin.html">
                 <fieldset>
                     <legend>Brugeradministration login:</legend>
                     <img class="logo" src="https://nunataryuk.org/images/Logos/dtu_logo.png" alt="DTU logo">
