--- a/src/main/Website/useradmin.html
+++ b/src/main/Website/useradmin.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Brugeradministration Oversigt</title>
-    <link rel="stylesheet" type="text/css" href="index.css">
+    <link rel="stylesheet" type="text/css" href="userstyle.css">
 </head>
 
 <body>
     <div id="menu">
         <h3>Menu</h3>
-        <a href="./useradmin.html">Brugeradministration</a> | <a href="index.html">Logud</a><br>
+        <a href="./useradmin.html">Brugeradministration</a> | <a href="userlogin.html">Logud</a><br>
     </div>
 
     <h1>Brugeradministration</h1>
