--- a/src/main/Website/useredit.html
+++ b/src/main/Website/useredit.html
@@ -3,19 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <title>Opret bruger</title>
-    <link rel="stylesheet" type="text/css" href="index.css">
+    <link rel="stylesheet" type="text/css" href="userstyle.css">
 </head>
 
 <body>
     <div id="menu">
         <h3>Menu</h3>
-        <a href="./useradmin.html">Brugeradministration</a> | <a href="index.html">Logud</a><br>
+        <a href="useradmin.html">Brugeradministration</a> | <a href="userlogin.html">Logud</a><br>
     </div>
 
     <div id="Create user form">
         <h1>Opret bruger</h1>
         <p>Bruger ID: (X)</p>
-        <form action="./useradmin.html">
+        <form action="useradmin.html">
             Brugernavn:<br>
             <input type="text" name="username"><br>
             Fornavn:<br>
