--- a/src/main/Website/useradmin.html
+++ b/src/main/Website/useradmin.html
@@ -9,11 +9,11 @@
 <body>
     <div id="menu">
         <h3>Menu</h3>
-        <a href="./useradmin.html">Brugeradministration</a> | <a href="userlogin.html">Logud</a><br>
+        <a href="./useradmin.html">Brugeradministration</a> | <a id="logOut" href="userlogin.html">Logud</a><br>
     </div>
 
     <h1>Brugeradministration</h1>
-    <a href="useredit.html">Opret ny bruger</a><br>
+    <a id="createUser" href="useredit.html">Opret ny bruger</a><br>
     <br>
 
     <div id="table">
