Single page website virker nu.

--- a/src/main/Website/MainPage.html
+++ b/src/main/Website/MainPage.html
@@ -34,6 +34,13 @@
     </div>
 
     <div id="adminPage">
+
+        <script>
+            $(document).ready(function(){
+                $("#adminPage").hide();
+            });
+        </script>
+
         <div id="menu">
             <h3>Menu</h3>
             <a href="./useradmin.html">Brugeradministration</a> | <a href="userlogin.html">Logud</a><br>
@@ -86,7 +93,14 @@
     </div>
 
     <div id="editPage">
-        <div id="menu">
+
+        <script>
+            $(document).ready(function(){
+                $("#editPage").hide();
+            });
+        </script>
+
+        <div id="editPageMenu">
             <h3>Menu</h3>
             <a href="useradmin.html">Brugeradministration</a> | <a href="userlogin.html">Logud</a><br>
         </div>
