Begyndt på REST metoder.

--- a/src/main/Website/MainPage.html
+++ b/src/main/Website/MainPage.html
@@ -126,7 +126,7 @@
                 <input class="check-box" type="checkbox" name="rolle" value="Produktionsleder"> Produktionsleder
                 <input class="check-box" type="checkbox" name="rolle" value="Laborant"> Laborant
                 <br> <br>
-                <input type="submit" value="Opret bruger">
+                <input id="createUserButton" type="submit" value="Opret bruger">
             </form>
         </div>
     </div>
