Tilføjest js funktionalitet

--- a/src/main/Website/MainPage.html
+++ b/src/main/Website/MainPage.html
@@ -9,16 +9,14 @@
 </head>
 
 <body>
-    <script src="/script.js"></script>
-
     <div id="loginPage">
+
         <div id="headers">
             <h1>Brugeradministration login side</h1>
             <h2>Gruppe 26</h2>
         </div>
 
         <div id="login form">
-            <form action="useradmin.html">
                 <fieldset>
                     <legend>Brugeradministration login:</legend>
                     <img class="logo" src="https://nunataryuk.org/images/Logos/dtu_logo.png" alt="DTU logo">
@@ -29,7 +27,6 @@
                     <br>
                     <input type="submit" id="loginButton" value="Login">
                 </fieldset>
-            </form>
         </div>
     </div>
 
@@ -43,11 +40,11 @@
 
         <div id="menu">
             <h3>Menu</h3>
-            <a href="./useradmin.html">Brugeradministration</a> | <a href="userlogin.html">Logud</a><br>
+            <a>Brugeradministration</a> | <a>Logud</a><br>
         </div>
 
         <h1>Brugeradministration</h1>
-        <a href="useredit.html">Opret ny bruger</a><br>
+        <a>Opret ny bruger</a><br>
         <br>
 
         <div id="table">
@@ -102,13 +99,12 @@
 
         <div id="editPageMenu">
             <h3>Menu</h3>
-            <a href="useradmin.html">Brugeradministration</a> | <a href="userlogin.html">Logud</a><br>
+            <a></a> | <a>Logud</a><br>
         </div>
 
         <div id="Create user form">
             <h1>Opret bruger</h1>
             <p>Bruger ID: (X)</p>
-            <form action="useradmin.html">
                 Brugernavn:<br>
                 <input type="text" name="username"><br>
                 Fornavn:<br>
@@ -127,10 +123,10 @@
                 <input class="check-box" type="checkbox" name="rolle" value="Laborant"> Laborant
                 <br> <br>
                 <input id="createUserButton" type="submit" value="Opret bruger">
-            </form>
         </div>
     </div>
 
+    <script type="text/javascript" src="script.js"></script>
 </body>
 
 </html>
